[package]
name = "day02"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day02p1"
path = "src/part_one.rs"

[[bin]]
name = "day02p2"
path = "src/part_two.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.2"
log = "0.4.20"
strum = "0.25.0"
strum_macros = "0.25.3"

